# badger

./: meson.build  meson.options  sqgipkg.json
.github/workflows/: release.yml
src/: Application.vala
